NEWS                                                            -*- outline -*-
----

Welcome to sbuild 0.58.0.  Please read these release notes carefully.

Full installation instructions are provided in the INSTALL file.  The
README file also contains more specific notes regarding building and
configuration.

* Major changes in 0.58.0:

  None.

* Major changes in 0.57.5:

  1) sbuild-createchroot now supports most of the options found in
     debootstrap.  It no longer adds main and contrib to
     /etc/apt/sources.list in the chroot (the components are now
     specified with --components instead of being hard-coded).

  2) All sbuild commands now support --help and --version options.

  3) sbuild-abort and sbuild have been updated to work with the
     current dpkg-buildpackage and handle build termination
     gracefully.

* Major changes in 0.57.4:

  None.

* Major changes in 0.57.3:

  None.

* Major changes in 0.57.2:

  1) The new dpkg source format is now supported.

  2) The chroot to build in may be specified independently of the
     distribution.

  3) Purging of files in the chroot has been made more reliable, by
     putting all of the build files in a single temporary directory
     which is purged after the build completes.

  4) $mailto no longer needs setting in .sbuildrc if not running as a
     buildd.

  5) An option to always update the APT package list has been added
     ($apt_update in sbuild.conf).

  6) wanna-build, the database used to track which packages need
     rebuilding, has been added as a separate package.

* Major changes in 0.57.1:

  1) While not used in the Debian packaging, the buildd and
     wanna-build sources have been merged from the separate buildd.git
     repository.  They will be built as packages in a future release.

  2) Helper scripts in the Debian package have been moved from
     /usr/lib/sbuild back to /usr/share/sbuild, where they were
     located prior to 0.57.0.
