@@ -141,9 +141,6 @@
 #		 "giflib-dev"			=> "libungif4-dev",
 #		 "freetype2-dev"		=> "libttf-dev");
 
-# Packages which should not be upgraded automatically.
-#@no_auto_upgrade = qw(dpkg apt bash libc6 libc6-dev dpkg-dev);
-
 # Regular expressions identifying toolchain packages.
 #@toolchain_regex = ( 'binutils$', 'gcc-[\d.]+$', 'g\+\+-[\d.]+$', 'libstdc\+\+', 'libc[\d.]+-dev$', 'linux-kernel-headers$' );
 
